# algo_vibes_SP500_RSI

./: .gitignore  README.md  app.py  download.py  engulfing.ipynb  new_strategy.ipynb  pyproject.toml  rsi_simulator.ipynb  rsi_strategy.ipynb  strategy.txt  tickers.html
.github/workflows/: download.yml
DATASET/: SP500-2023-02-24.parquet  SP500-2023-02-27.parquet  SP500-2023-03-02.parquet  SP500-2023-03-03.parquet  SP500-2023-03-08.parquet  SP500-2023-03-09.parquet
pkg/: symbols.py  yahoo.py
pkg/webview/: dashboard.py  demo.py
pkg/webview/assets/: dashboard.css
test/: test_strategy.py  test_symbols.py  test_yahoo.py
tests/: test_yahoo.py
